--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href = "">Пътнически влакове</a></li>
             <li><a href = "">Товарни влакове</a></li>
             <li><a href = "">Високоскоростни влакове</a></li>
-            <li><a href = "">Влакове</a></li>
+            <li><a href = "влакове.html">Влакове</a></li>
             <li><a href = "">Контакти</a></li>
 
 
