--- a/влакове.html
+++ b/влакове.html
@@ -50,7 +50,7 @@
         <tr>
             <td>
 
-                <a href="пътнически влакове.html"><img src="пътнически влакове.jfif" style = "width: 50%; height: 60%"></a>
+                <a href="пътнически влакове.html"><img src="пътнически-влакове.png" style = "width: 50%; height: 60%"></a>
                 <b><p style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">Пътнически влакове</p></b>
 
             </td>
