--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     
 
     <header>
+
+        <div>Test</div>
         <ul>
     
             <li><a class="active" href="index.html">Начало</a></li>
