--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         }
         td {
             vertical-align: top;
+            color: black
         }
         img {
             width: 50%;
@@ -73,10 +74,30 @@
         <tr>
             <td>
                 <img src="заглавие,лого,мото.png" style = "width: 50%; height: 60%">
-                <div class="subtitle">Най-новите влакове</div> <!-- Добавен текст -->
+                <div class="subtitle">Най-новите влакове</div> 
             </td>
         </tr>
     </table>
+
+    <table>
+
+        <tr>
+            <td>
+
+                <a href=""><img src="RegioPanter (Škoda)_.png" style = "width: 40%; height: 60%"></a>
+                <b><p style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5rem;">RegioPanter (Škoda)</p></b>
+
+            </td>
+
+            <td>
+                <a href=""><img src="" style = "width: 50%; height: 60%"></a>
+                <b><p style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5rem;">European Sleeper</p></b>
+            </td>
+
+            <td>
+                <a href=""><img src="" style = "width: 50%; height: 60%"></a>
+                <b><p style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5rem;">Orient Express</p></b>
+            </td>
 
 
     
