--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <tr>
             <td>
 
-                <a href=""><img src="RegioPanter (Škoda)_.png" style = "width: 40%; height: 60%"></a>
+                <a href=""><img src="RegioPanterSkoda.png" style = "width: 30%; height: 50%"></a>
                 <b><p style = "text-align: center; font-family: Arial, Helvetica, sans-serif; font-size: 1.5rem;">RegioPanter (Škoda)</p></b>
 
             </td>
