Добавяне на връзки

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
             <li><a class="active" href="index.html">Начало</a></li>
             <li><a href = "влакове.html">Влакове</a></li>
-            <li><a href = "">Контакти</a></li>
+            <li><a href = "контакти.html">Контакти</a></li>
         </ul>
     </header>
     
