--- a/контакти.html
+++ b/контакти.html
@@ -14,8 +14,8 @@
         <ul>
     
             <li><a href="index.html">Начало</a></li>
-            <li><a href = "влакове.html">Влакове</a></li>
-            <li><a href = "контакти.html">Контакти</a></li>
+            <li><a href="влакове.html">Влакове</a></li>
+            <li><a class="active" href="контакти.html">Контакти</a></li>
 
     </header>
 
