--- a/EuropeanSleeper.html
+++ b/EuropeanSleeper.html
@@ -12,7 +12,7 @@
         text-align: center; 
         margin-top: 0.5%; 
         margin-bottom: 1%; 
-        color: #333; 
+        color: black; 
     }
     header ul {
         list-style: none;
@@ -27,7 +27,7 @@
         text-decoration: none;
     }
     h1, h2 {
-        color: #333;
+        color: black;
     }
     .content {
         max-width: 800px;
