--- a/RegioPanterSkoda.html
+++ b/RegioPanterSkoda.html
@@ -10,7 +10,7 @@
             text-align: center; 
             margin-top: 0.5%; 
             margin-bottom: 1%; 
-            color: #333; 
+            color: black; 
         }
         header ul {
             list-style: none;
@@ -25,7 +25,7 @@
             text-decoration: none;
         }
         h1, h2 {
-            color: #333;
+            color: black;
         }
         .content {
             max-width: 800px;
