Редактиране на оформлението

--- a/влакове.html
+++ b/влакове.html
@@ -32,6 +32,7 @@
             flex: 1; /* Позволява на всеки правоъгълник да заема еднаква ширина */
             max-width: 20%; /* Ограничаване на максималната ширина */
             height: 20%;
+            width: 20%;
         }
 
         .train-image {
@@ -50,49 +51,47 @@
         <li><a href="контакти.html">Контакти</a></li>
     </ul>
 </header>
-<div>
+
+
+<div class="train-types">
+<div class="train-box">
+    <img src="sleeper.png" alt="European Sleeper" class="train-image">
+    <h3>European Sleeper</h3>
+    <a href="EuropeanSleeper.html" class="more-info-btn">Повече информация</a>
+</div>
+<div class="train-box">
+    <img src="OrientExpress4_.jpg" alt="Orient Express" class="train-image">
+    <h3>Orient Express</h3>
+    <a href="OrientExpress.html" class="more-info-btn">Повече информация</a>
+</div>
+</div>
+
 <div class="train-types">
     <div class="train-box">
         <img src="RegioPanterSkoda.png" alt="Regio Panter (Škoda)" class="train-image">
         <h3>Regio Panter (Škoda)</h3>
         <a href="RegioPanterSkoda.html" class="more-info-btn">Повече информация</a>
     </div>
-</div>
+    
+    <div class="train-box">
+        <img src="високоскоростни-влакове.png" alt="Високоскоростни влакове" class="train-image">
+        <h3>Високоскоростни влакове</h3>
+        <a href="високоскоростни-влакове.html" class="more-info-btn">Повече информация</a>
+    </div>
+    </div>
+    
 <div class="train-types">
-<div class="train-box">
-    <img src="EuropeanSleeper.jpg" alt="European Sleeper" class="train-image">
-    <h3>European Sleeper</h3>
-    <a href="EuropeanSleeper.html" class="more-info-btn">Повече информация</a>
-</div>
-</div>
-<div class="train-types">
-<div class="train-box">
-    <img src="OrientExpress.jpg" alt="Orient Express" class="train-image">
-    <h3>Orient Express</h3>
-    <a href="OrientExpress.html" class="more-info-btn">Повече информация</a>
-</div>
-</div>
-<div class="train-types">
-<div class="train-box">
-    <img src="пътнически-влакове.png" alt="Пътнически влакове" class="train-image">
-    <h3>Пътнически влакове</h3>
-    <a href="пътнически влакове.html" class="more-info-btn">Повече информация</a>
-</div>
-</div>
-<div class="train-types">
+    <div class="train-box">
+        <img src="пътнически-влакове.png" alt="Пътнически влакове" class="train-image">
+        <h3>Пътнически влакове</h3>
+        <a href="пътнически-влакове.html" class="more-info-btn">Повече информация</a>
+    </div>
 <div class="train-box">
     <img src="товарни-влакове.png" alt="Пътнически влакове" class="train-image">
     <h3>Товарни влакове</h3>
-    <a href="товарни влакове.html" class="more-info-btn">Повече информация</a>
+    <a href="товарни-влакове.html" class="more-info-btn">Повече информация</a>
 </div>
 </div>
 
-<div class="train-types">
-<div class="train-box">
-    <img src="високоскоростни-влакове.png" alt="Високоскоростни влакове" class="train-image">
-    <h3>Високоскоростни влакове</h3>
-    <a href="високоскоростни влакове.html" class="more-info-btn">Повече информация</a>
-</div>
-</div>
 </body>
 </html>
