--- a/контакти.html
+++ b/контакти.html
@@ -22,6 +22,7 @@
     <section class="contact">
         <div class="content">
             <h2>Контакти</h2>
+            <p>Ако имате въпроси, предложения или искате да се свържете с нас относно съдържанието на сайта, моля, не се колебайте да ни пишете. Ние сме тук, за да помогнем и ще се радваме да чуем вашите идеи и мнения.</p>
         </div>
         <div class="container">
             <div class="contactInfo">
